--- a/MySimpleTweets/app/build.gradle
+++ b/MySimpleTweets/app/build.gradle
@@ -48,4 +48,5 @@ dependencies {
     compile 'org.parceler:parceler-api:1.1.6'
     annotationProcessor 'org.parceler:parceler:1.1.6'
     compile 'com.facebook.stetho:stetho:1.4.1'
+    compile 'com.android.support:design:25.3.1'
 }
